--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://img.favpng.com/6/21/23/online-chat-amazon-com-livechat-app-store-png-favpng-Ee2Pxd7j9T1JDwXt8DWP7kX8k.jpg" />
+    <link rel="icon" type="image/svg+xml" href="https://w7.pngwing.com/pngs/420/901/png-transparent-whatsapp-instant-messaging-message-messaging-apps-whatsapp-blue-text-logo-thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
   </head>
